--- a/arshop-store/package.json
+++ b/arshop-store/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
+    "axios": "^1.8.4",
     "clsx": "^2.1.1",
     "lucide-react": "^0.484.0",
     "next": "15.2.3",
     "query-string": "^9.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "tailwind-merge": "^3.0.2",
     "zustand": "^5.0.3"
   },
